# sdl-project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile2  README.md  _CMakeLists.txt  _main.cpp  build.sh  configure.sh  git.sh  install.sh  main.cpp  run.sh  sdlprojectConfig.h.in
Adder/: adder.h
itkjs/: CMakeLists.txt  hello.cpp  index.js  package.json
libraries/: Makefile  README.md  lib_mylib.c
scripts/: commit-push.sh  run.sh  variables.sh
